Fix the line-height crunch on Browse all alonetone artists mobile collapse

--- a/app/assets/stylesheets/white_theme/users_index.scss
+++ b/app/assets/stylesheets/white_theme/users_index.scss
@@ -7,6 +7,7 @@
 		width: 30%;
 		@media #{$tablet} {
 			width: 100%;
+			line-height: 1.1;
 		}
 		#links {
 			width: 230px;
